# WaveSynth

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: constants.h  main.c
src/bmp/: process_wraper.cpp  process_wraper.h
src/cpp/: process.cpp
src/double/: big_double.c  big_double.h
src/math/: big_double.c  big_double.h  functions.c  functions.h
src/melody/: purer_melody.c  purer_melody.h
src/noise/: noises.c  noises.h
src/stb/: stb_image.h
src/utils/: utils.h
src/wav/: make_wav.c  make_wav.h
src/waves/: waves.c  waves.h
